--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "1.0.6",
+    "framer-motion": "^7.4.0",
     "next": "12.3.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
